ags (2.2.27)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored get object mutex

ags (2.2.26)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented lock-free soundcard buffer in ags-play recall
	* implemented ags_soundcard_get_sub_block_count()
	* implemented ags_soundcard_trylock_sub_block()
	* implemented ags_soundcard_unlock_sub_block()
	* improved AgsDevout, AgsPulseDevout, AgsJackDevout and AgsCoreAudioDevout

ags (2.2.25)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored ags_audio_buffer_util.c to support builtin vector functions
	* fixed ags_char_buffer_util.c

ags (2.2.24)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed SIGSEGV as open file

ags (2.2.23)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed relative counters and time fraction issues
	* improved replacing hard-coded font
	* refactored AgsDial to use PangoLayout
	* refactored AgsLevel to use PangoLayout
	* refactored AgsScale to use PangoLayout
	* refactored AgsRuler to use PangoLayout
	* refactored AgsCartesian to use PangoLayout

ags (2.2.22)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsNotationEditor to use GUI scale factor
	* implemented AgsWaveEditor to use GUI scale factor
	* implemented AgsAutomationEditor to use GUI scale factor
	* implemented AgsRuler properties
	* implemented AgsFFPlayer to use GUI scale factor
	* improved AgsCellPattern to use GUI scale factor

ags (2.2.21)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsCellPattern and AgsPatternBox to use GUI scale factor
	* implemented GtkVScrollbar and GtkHScrollbar to GUI scale using slider-width and stepper-size
	* implemented GtkVScale and GtkHScale to GUI scale using slider-width

ags (2.2.20)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented GUI scale factor
	* implemented AgsIndicator properties