@@ -1,3 +1,8 @@
+ags (2.2.28)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed ags_audio_buffer_util_peak_*() to handle 0.0 correctly
+
 ags (2.2.27)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
